@@ -4,4 +4,4 @@ __author__ = "Graham Higgins"
 __version__ = "0.1"
 
 
-from sparqlstore import SPARQLStore
+from sparqlstore import SPARQLStore, SPARQLUpdateStore
